<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, IsometricWorld!</string>
    <string name="app_name">IsometricWorld</string>
    <string name="build">Build object</string>
    <string name="network">Networking</string>
    <string name="human">Place Human</string>
    <string name="map">Change Map</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="migrate">Migrate</string>
    <string name="hostip">Input host IP</string>
    <string name="shutdown">shutdown network</string>
    <!-- Build dialog -->
    <string name="build_object_width">Width:</string>
    <string name="build_object_length">Length:</string>
    <string name="build_object_height">Height:</string>
    <!-- Network -->
    <string name="multiplayer_role_selection">Please select which role you are playing</string>
    <string name="multiplayer_role_selection_host_label">Host</string>
    <string name="multiplayer_role_selection_client_label">Client</string>
    <!-- Menus -->
    <string name="single_player">Single Player</string>
    <string name="Multiplayer">Multiplayer</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="load_game">Load game</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- Multiplayer menu -->
    <string name="multiplayer_players">players</string>
    <string name="multiplayer_players_hint">How many players max?</string>
    <string name="multiplayer_invite">Invite</string>
    <string name="multiplayer_invite_see">See invites</string>

    <!-- Settings keys -->
    <string name="settings_key_logging">settings_key_logging</string>

    <!-- Settings strings for menus -->
    <string name="settings_header_main">Main game settings</string>
    <string name="settings_header_main_summary">Set the main game settings here</string>
    <string name="settings_logging_title">Set logging level</string>
    <string name="settings_logging_summary">Set logging file level, applies after restart</string>
    <string name="title_activity_multiplayer">Multiplayer</string>
    <string name="title_activity_lobby">Lobby</string>
    
    <!-- Dialogs -->
    <string name="invite_text">Accept invite?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

</resources>