<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_main_menu_single_palyer"
        style="@style/button_red_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:text="@string/single_player" />
    
    <Button
        android:id="@+id/btn_main_menu_multiplayer"
        android:visibility="gone"
        android:layout_below="@+id/btn_main_menu_single_palyer"
        style="@style/button_red_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:text="@string/Multiplayer" />

    <Button
        android:id="@+id/btn_main_menu_load_game"
        style="@style/button_red_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_main_menu_multiplayer"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:text="@string/load_game" />

    <Button
        android:id="@+id/btn_main_menu_settings"
        style="@style/button_red_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_main_menu_load_game"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/btn_main_menu_exit"
        style="@style/button_red_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_main_menu_settings"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:text="@string/exit" />
	
    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_sign_in"
        style="@style/SignInButton"
        android:layout_below="@+id/btn_main_menu_exit"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp" />
    <Button
        android:id="@+id/btn_main_menu_sign_out"
        style="@style/button_red_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:visibility="gone"
        android:text="@string/sign_out" />

</RelativeLayout>