<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/multiplayer_role"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <TextView
        android:id="@+id/multiplayer_role_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer_role_selection" />

    <RadioGroup
        android:id="@+id/multiplayer_dialog_role_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiplayer_role_textview"
        android:layout_centerInParent="true"
        android:layout_margin="2dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/multiplayer_dialog_role_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/multiplayer_role_selection_host_label" />

        <RadioButton
            android:id="@+id/multiplayer_dialog_role_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/multiplayer_role_selection_client_label" />
    </RadioGroup>

</RelativeLayout>