<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="50" >
    </ListView>

    <RelativeLayout
        android:id="@+id/details"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="50" >

        <ImageView
            android:id="@+id/details_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/hello" />

        <TextView
            android:id="@+id/details_width_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_image"
            android:text="@string/build_object_width"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/details_width_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/details_width_label"
            android:layout_toRightOf="@+id/details_width_label"
            android:paddingLeft="5dp"
            android:text="@string/build_object_width"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/details_length_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_width_label"
            android:text="@string/build_object_length"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/details_length_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_width_text"
            android:layout_alignTop="@+id/details_length_label"
            android:layout_toRightOf="@+id/details_length_label"
            android:paddingLeft="5dp"
            android:text="@string/build_object_length"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/details_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_length_label"
            android:text="@string/build_object_height"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/details_height_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_length_text"
            android:layout_alignTop="@+id/details_height_label"
            android:layout_toRightOf="@+id/details_height_label"
            android:paddingLeft="5dp"
            android:text="@string/build_object_height"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/details_done"
            style="@style/button_red_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_height_label"
            android:layout_centerHorizontal="true"
            android:text="@string/done"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/details_cancel"
            style="@style/button_red_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_height_label"
            android:layout_toRightOf="@+id/details_done"
            android:layout_marginLeft="10sp"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</LinearLayout>